--- a/WpfMarathon/Pages/RegBegunPage.xaml
+++ b/WpfMarathon/Pages/RegBegunPage.xaml
@@ -7,12 +7,11 @@
       mc:Ignorable="d" 
       d:DesignHeight="1080" d:DesignWidth="1920"
       Title="RegBegunPage">
-
     <Grid Background="White">
         <!-- Верхняя панель с заголовком -->
-        <DockPanel LastChildFill="False" Grid.ColumnSpan="8">
-            <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Margin="0,0,0,10" Width="1919">
-                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0" >
+        <DockPanel LastChildFill="False">
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Top" Background="#333333" Margin="0,0,0,10">
+                <Button Content="Назад" Width="150" Height="55" FontSize="36" Margin="50,0,0,0">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="15"/>
@@ -20,93 +19,105 @@
                     </Button.Resources>
                 </Button>
                 <TextBlock Text="MARATHON SKILLS 2025" Foreground="White" FontSize="56" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="160,20,0,20"/>
-
             </StackPanel>
         </DockPanel>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="87*"/>
-            <ColumnDefinition Width="258"/>
-            <ColumnDefinition Width="368.942"/>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="443.17"/>
-            <ColumnDefinition Width="75"/>
-            <ColumnDefinition Width="225"/>
-            <ColumnDefinition Width="188*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="112.5"/>
-            <RowDefinition Height="0*"/>
-            <RowDefinition Height="188"/>
-            <RowDefinition Height="72"/>
-            <RowDefinition Height="72"/>
-            <RowDefinition Height="81"/>
-            <RowDefinition Height="78"/>
-            <RowDefinition Height="84"/>
-            <RowDefinition Height="90"/>
-            <RowDefinition Height="235"/>
-            <RowDefinition Height="0*"/>
-            <RowDefinition Height="75"/>
-        </Grid.RowDefinitions>
 
-        <TextBlock HorizontalAlignment="Right" Grid.Row="3" TextWrapping="Wrap" Text="Email:" VerticalAlignment="Top" Height="38" Margin="0,8,2,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="75"/>
-        <TextBlock HorizontalAlignment="Right" Margin="0,8,365,0" Grid.Row="4" TextWrapping="Wrap" Text="Пароль:" VerticalAlignment="Top" Height="36" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="113" Grid.ColumnSpan="2"/>
-        <TextBlock HorizontalAlignment="Left" Margin="12,8,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" FontFamily="Open Sans Light" FontSize="27" Width="258" Grid.Column="1" Grid.ColumnSpan="2"><Run Text="Повторите пароль"/><Run Text=":"/></TextBlock>
-        <TextBlock HorizontalAlignment="Right" Margin="0,8,365,0" Grid.Row="6" TextWrapping="Wrap" VerticalAlignment="Top" Height="36" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="75" Grid.ColumnSpan="2"><Run Text="Имя"/><Run Text=":"/></TextBlock>
-        <TextBlock HorizontalAlignment="Right" Margin="0,8,368,0" Grid.Row="7" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="127" Grid.ColumnSpan="2"><Run Text="Фамилия"/><Run Text=":"/></TextBlock>
-        <TextBlock HorizontalAlignment="Right" Margin="0,8,2,0" Grid.Row="8" TextWrapping="Wrap" VerticalAlignment="Top" Height="36" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="60"><Run Text="Пол"/><Run Text=":"/></TextBlock>
-        <TextBox Name="txb_email" Grid.Column="2" Height="46" Grid.Row="3" TextWrapping="Wrap" GotFocus="txb_email_GotFocus" Text="Email"  VerticalAlignment="Top" Margin="15,8,6,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
-        <TextBox Name="txb_pass" Grid.Column="2" Height="44" Grid.Row="4" TextWrapping="Wrap" GotFocus="txb_pass_GotFocus" Text="Пароль" VerticalAlignment="Top" Margin="15,8,60,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
-        <TextBox Name="txb_repeatpass" Grid.Column="2" Height="46" Grid.Row="5" TextWrapping="Wrap" GotFocus="txb_repeatpass_GotFocus" Text="Повторите пароль" VerticalAlignment="Top" Margin="15,8,60,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
-        <TextBox Name="txb_name" Grid.Column="2" Height="44" Grid.Row="6" TextWrapping="Wrap" GotFocus="txb_name_GotFocus" Text="Имя" VerticalAlignment="Top" Margin="15,8,60,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
-        <TextBox Name="txb_surname" Grid.Column="2" Height="46" Grid.Row="7" TextWrapping="Wrap" GotFocus="txb_surname_GotFocus" Text="Фамилия" VerticalAlignment="Top" Margin="15,8,60,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27"/>
-        <ComboBox Name="cmb_gender" Grid.Column="2" Margin="15,8,120,0" Grid.Row="8" VerticalAlignment="Top" FontFamily="Open Sans Light" FontSize="27" Height="44" />
-        <TextBlock HorizontalAlignment="Left" Margin="126,64,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Grid.Column="4" Text="Фото файл:" Width="150" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2"/>
-        <Rectangle Grid.Column="6" Fill="#FFEAEAEA" HorizontalAlignment="Left" Height="180" Grid.Row="3" Grid.RowSpan="4" Stroke="Black" VerticalAlignment="Bottom" Width="165" Margin="8,0,0,66"/>
-        <TextBlock Grid.Column="6" Margin="45,50,90,74" Grid.Row="4" TextWrapping="Wrap" Text="Фото" FontFamily="Open Sans Light" FontSize="27" TextAlignment="Center" Grid.RowSpan="2"/>
-        <TextBox x:Name="txb_pathphoto" Grid.Column="4" Height="44" Grid.Row="6" TextWrapping="Wrap" GotFocus="txb_pathphoto_GotFocus" Text="Photo_logo.png" VerticalAlignment="Top" Margin="101,26,0,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Left" Width="375" Grid.ColumnSpan="2"/>
-        <Image Name="imgAvatar" Grid.Column="6" HorizontalAlignment="Left" Height="180" Margin="8,0,0,66" Grid.Row="3" Grid.RowSpan="4" VerticalAlignment="Bottom" Width="165"/>
-        <Button Name="btn_source" Content="Просмотр..." Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="5" Grid.Row="6" Click="btn_source_Click" Margin="0,0,54,12" Grid.ColumnSpan="2">
-            <Button.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </Button.Resources>
-        </Button>
-        <Grid Grid.Column="4" Margin="15,74,0,2" Grid.Row="6" Grid.ColumnSpan="3" Grid.RowSpan="2">
+        <!-- Оптимизированный Grid без нулевых строк и колонок -->
+        <Grid Margin="40,0,0,60">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="258"/>
+                <ColumnDefinition Width="368.942"/>
+                <ColumnDefinition Width="443.17"/>
+                <ColumnDefinition Width="75"/>
                 <ColumnDefinition Width="225"/>
-                <ColumnDefinition Width="375"/>
             </Grid.ColumnDefinitions>
-            <DatePicker Name="dateBirth"  Margin="0,0,15,0" VerticalAlignment="Top" Grid.Column="2" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Right" Width="330"/>
-            <TextBlock HorizontalAlignment="Right" Margin="0,4,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Width="215" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1"><Run Text="Дата рождения"/><Run Text=":"/></TextBlock>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="188"/>
+                <RowDefinition Height="72"/>
+                <RowDefinition Height="72"/>
+                <RowDefinition Height="81"/>
+                <RowDefinition Height="78"/>
+                <RowDefinition Height="84"/>
+                <RowDefinition Height="90"/>
+                <RowDefinition Height="235"/>
+                <RowDefinition Height="75"/>
+            </Grid.RowDefinitions>
+
+            <!-- Текстовые метки -->
+            <TextBlock HorizontalAlignment="Right" Grid.Row="3" TextWrapping="Wrap" Text="Email:" VerticalAlignment="Top" Height="38" Margin="0,14,251,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="75"/>
+            <TextBlock HorizontalAlignment="Right" Grid.Row="4" TextWrapping="Wrap" Text="Пароль:" VerticalAlignment="Top" Height="36" Margin="0,5,245,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="113"/>
+            <TextBlock HorizontalAlignment="Left" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" FontFamily="Open Sans Light" FontSize="27" Width="258" Margin="120,69,0,0" Grid.RowSpan="2" Grid.ColumnSpan="2"><Run Text="Повторите пароль"/><Run Text=":"/></TextBlock>
+            <TextBlock HorizontalAlignment="Right" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="36" Margin="0,80,245,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="75" Grid.RowSpan="2"><Run Text="Имя"/><Run Text=":"/></TextBlock>
+            <TextBlock HorizontalAlignment="Left" Grid.Row="6" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Margin="252,74,0,0" Grid.Column="0" FontFamily="Open Sans Light" FontSize="27" Width="127" Grid.ColumnSpan="2" Grid.RowSpan="2"><Run Text="Фамилия"/><Run Text=":"/></TextBlock>
+            <TextBlock HorizontalAlignment="Right" Grid.Row="7" TextWrapping="Wrap" VerticalAlignment="Top" Height="36" Margin="0,68,251,0" Grid.Column="1" FontFamily="Open Sans Light" FontSize="27" Width="60"><Run Text="Пол"/><Run Text=":"/></TextBlock>
+
+            <!-- Поля ввода -->
+            <TextBox Name="txb_email" Grid.Column="1" Height="46" Grid.Row="3" TextWrapping="Wrap" GotFocus="txb_email_GotFocus" Text="Email" VerticalAlignment="Top" Margin="135,14,329,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.ColumnSpan="2"/>
+            <TextBox Name="txb_pass" Grid.Column="1" Height="44" Grid.Row="4" TextWrapping="Wrap" GotFocus="txb_pass_GotFocus" Text="Пароль" VerticalAlignment="Top" Margin="135,5,383,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.ColumnSpan="2" />
+            <TextBox Name="txb_repeatpass" Grid.Column="1" Height="46" Grid.Row="4" TextWrapping="Wrap" GotFocus="txb_repeatpass_GotFocus" Text="Повторите пароль" VerticalAlignment="Top" Margin="135,76,383,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+            <TextBox Name="txb_name" Grid.Column="1" Height="44" Grid.Row="5" TextWrapping="Wrap" GotFocus="txb_name_GotFocus" Text="Имя" VerticalAlignment="Top" Margin="135,80,383,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+            <TextBox Name="txb_surname" Grid.Column="1" Height="46" Grid.Row="6" TextWrapping="Wrap" GotFocus="txb_surname_GotFocus" Text="Фамилия" VerticalAlignment="Top" Margin="135,74,383,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+            <ComboBox Name="cmb_gender" Grid.Column="1" Margin="135,68,443,0" Grid.Row="7" VerticalAlignment="Top" FontFamily="Open Sans Light" FontSize="27" Height="44" Grid.ColumnSpan="2"/>
+
+            <!-- Фото -->
+            <TextBlock HorizontalAlignment="Left" Margin="246,55,0,0" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Grid.Column="2" Text="Фото файл:" Width="150" FontFamily="Open Sans Light" FontSize="27" Grid.RowSpan="2"/>
+            <Rectangle Grid.Column="4" Fill="#FFEAEAEA" HorizontalAlignment="Left" Height="180" Grid.Row="2" Grid.RowSpan="4" Stroke="Black" VerticalAlignment="Bottom" Width="165" Margin="68,0,0,78"/>
+            <TextBlock Grid.Column="4" Margin="99,56,30,55" Grid.Row="3" TextWrapping="Wrap" Text="Фото" FontFamily="Open Sans Light" FontSize="27" TextAlignment="Center" Grid.RowSpan="2"/>
+            <TextBox x:Name="txb_pathphoto" Grid.Column="2" Height="44" Grid.Row="6" TextWrapping="Wrap" GotFocus="txb_pathphoto_GotFocus" Text="Photo_logo.png" VerticalAlignment="Top" Margin="221,14,0,0" Foreground="#FF999999" FontStyle="Italic" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Left" Width="375" Grid.ColumnSpan="3"/>
+            <Image Name="imgAvatar" Grid.Column="4" HorizontalAlignment="Left" Height="180" Margin="68,0,0,78" Grid.Row="2" Grid.RowSpan="4" VerticalAlignment="Bottom" Width="165"/>
+
+            <Button Name="btn_source" Content="Просмотр..." Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="4" Grid.Row="6" Click="btn_source_Click" Margin="0,0,-66,36">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="15"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+
+            <!-- Дата рождения -->
+            <Grid Grid.Column="2" Margin="135,62,-120,177" Grid.Row="6" Grid.ColumnSpan="3" Grid.RowSpan="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="225"/>
+                    <ColumnDefinition Width="375"/>
+                </Grid.ColumnDefinitions>
+                <DatePicker Name="dateBirth" Margin="0,0,15,0" VerticalAlignment="Top" Grid.Column="2" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Right" Width="330"/>
+                <TextBlock HorizontalAlignment="Right" Margin="0,4,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="38" Width="215" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1"><Run Text="Дата рождения"/><Run Text=":"/></TextBlock>
+            </Grid>
+
+            <!-- Страна -->
+            <Grid Grid.Column="2" Margin="135,60,-120,97" Grid.Row="7" Grid.ColumnSpan="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="150"/>
+                    <ColumnDefinition Width="375"/>
+                </Grid.ColumnDefinitions>
+                <ComboBox Name="cmbCountry" Grid.Column="2" Margin="0,4.5,15,0" VerticalAlignment="Top" Height="45" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Right" Width="330"/>
+                <TextBlock HorizontalAlignment="Right" Margin="0,4.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="37.5" Width="112.5" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1"><Run Text="Страна"/><Run Text=":"/></TextBlock>
+            </Grid>
+
+            <!-- Заголовок формы -->
+            <Grid Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Margin="240,150,-240,42" Grid.RowSpan="3">
+                <TextBlock Text="Регистрация бегуна" FontSize="42" Foreground="#FF6C6C6C" HorizontalAlignment="Center" Margin="0,0,0,80"/>
+                <TextBlock Text="Пожалуйста заполните всю информацию, чтобы зарегистрироваться в качестве бегуна" 
+                           FontSize="27" Foreground="#FF6C6C6C" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,99,0,0" Height="51"/>
+            </Grid>
+
+            <!-- Кнопки -->
+            <Button x:Name="btn_Reg" Content="Регистрация" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="1" Grid.Row="7" Margin="0,0,6,22" Click="btn_Reg_Click">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="15"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+            <Button x:Name="btn_cancel" Content="Отмена" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="7" Margin="0,0,216,22">
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="15"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
         </Grid>
-        <Grid Grid.Column="4" Margin="15,0,0,12" Grid.Row="8" Grid.ColumnSpan="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="150"/>
-                <ColumnDefinition Width="375"/>
-            </Grid.ColumnDefinitions>
-            <ComboBox Name="cmbCountry" Grid.Column="2" Margin="0,4.5,15,0" VerticalAlignment="Top" Height="45" FontFamily="Open Sans Light" FontSize="27" HorizontalAlignment="Right" Width="330"/>
-            <TextBlock HorizontalAlignment="Right" Margin="0,4.5,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="37.5" Width="112.5" FontFamily="Open Sans Light" FontSize="27" Grid.Column="1"><Run Text="Страна"/><Run Text=":"/></TextBlock>
-        </Grid>
-        <Grid Grid.Column="1" HorizontalAlignment="Left" Height="158" Margin="150,20,0,0" Grid.Row="2" VerticalAlignment="Top" Width="1050" Grid.ColumnSpan="6">
-            <TextBlock HorizontalAlignment="Left" Margin="375,-7.5,0,0" TextWrapping="Wrap" Text="Регистрация бегуна" VerticalAlignment="Top" FontSize="42" Foreground="#FF6C6C6C" Height="52.5"/>
-            <TextBlock HorizontalAlignment="Left" Margin="30,75,0,12" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="27" Width="975" TextAlignment="Center" Foreground="#FF6C6C6C"><Run Text="Пожалуйста заполните всю информацию, чтобы зарегистрировать"/><Run Text="с"/><Run Text="я в качестве бегуна"/></TextBlock>
-        </Grid>
-        <Button x:Name="btn_Reg" Content="Регистрация" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="2" Grid.Row="9" Margin="0,0,6,22" Click="btn_Reg_Click">
-            <Button.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </Button.Resources>
-        </Button>
-        <Button x:Name="btn_cancel" Content="Отмена" Background="#FFF2F2F2" FontFamily="Open Sans Light" FontSize="27" Foreground="#FF474747" HorizontalAlignment="Right" Width="180" Height="44" VerticalAlignment="Bottom" Grid.Column="4" Grid.Row="9" Margin="0,0,216,22">
-            <Button.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="15"/>
-                </Style>
-            </Button.Resources>
-        </Button>
     </Grid>
 </Page>
